Analyse et exploration des données

--- a/Analyse et exploration des données .ipynb
+++ b/Analyse et exploration des données .ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1f067275",
+   "id": "90307753",
    "metadata": {},
    "source": [
-    " ## 1. ANALYSE ET EXPLORATION DES DONNÉES"
+    " ## 1. Analyse et exploration des données"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "0764d2ec",
+   "id": "122d9cad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "e2f3d08d",
+   "id": "b98c2a8e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "f6036b14",
+   "id": "00f78555",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "3f8c850d",
+   "id": "e9e583c5",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "1f4dac54",
+   "id": "62cbf3bb",
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "3a3e9377",
+   "id": "518b7d52",
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "2d05a6e7",
+   "id": "16108551",
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ad5beba",
+   "id": "2f7fd7b6",
    "metadata": {},
    "source": [
     "## Histogramme des variables continues "
@@ -263,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "de48352f",
+   "id": "a432f4da",
    "metadata": {},
    "outputs": [
     {
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a38d361",
+   "id": "f19581b1",
    "metadata": {},
    "source": [
     "## Variables qualitatives"
@@ -295,7 +295,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "d7bd6cdd",
+   "id": "71c3c28f",
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +327,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "68964a84",
+   "id": "e857a326",
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +357,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "45af94e7",
+   "id": "cd531c95",
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "29e65eb9",
+   "id": "0f909dd1",
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +485,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cecd8008",
+   "id": "49968d95",
    "metadata": {},
    "outputs": [],
    "source": []
