--- a/Analyse et exploration des données .ipynb
+++ b/Analyse et exploration des données .ipynb
@@ -496,7 +496,7 @@
    "id": "2a21706f",
    "metadata": {},
    "source": [
-    "## JOB"
+    "## LEARN JOB"
    ]
   },
   {
@@ -920,7 +920,7 @@
    "id": "b7ae4830",
    "metadata": {},
    "source": [
-    "## SPORT"
+    "## LEARN SPORT"
    ]
   },
   {
@@ -1126,7 +1126,7 @@
    "id": "9a4455c2",
    "metadata": {},
    "source": [
-    "## EMP-CONTRACT"
+    "## LEARN EMP-CONTRACT"
    ]
   },
   {
@@ -1228,7 +1228,7 @@
    "id": "722adc70",
    "metadata": {},
    "source": [
-    "## LEARN + JOB + SPORT + EMP-CONTRACT "
+    "## LEARN {JOB + SPORT + EMP-CONTRACT }"
    ]
   },
   {
@@ -1902,18 +1902,168 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
-   "id": "68ce8a48",
+   "execution_count": 148,
+   "id": "44106780",
    "metadata": {},
    "outputs": [],
    "source": [
-    "_df = df[[\"Emolument\", \"Working_hours\", \"target\", \"AGE_2018\"]]"
+    "_df = df[[\"Emolument\", \"Working_hours\", \"AGE_2018\", \"target\"]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "id": "0496eae2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Emolument</th>\n",
+       "      <th>Working_hours</th>\n",
+       "      <th>AGE_2018</th>\n",
+       "      <th>target</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>UID</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>20794.0</td>\n",
+       "      <td>1838.0</td>\n",
+       "      <td>44</td>\n",
+       "      <td>33.1791</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>52</td>\n",
+       "      <td>42.3055</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>80</td>\n",
+       "      <td>45.9223</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>58</td>\n",
+       "      <td>39.3028</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>14514.0</td>\n",
+       "      <td>378.0</td>\n",
+       "      <td>42</td>\n",
+       "      <td>28.6227</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99992</th>\n",
+       "      <td>20236.0</td>\n",
+       "      <td>1498.0</td>\n",
+       "      <td>37</td>\n",
+       "      <td>43.6648</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99993</th>\n",
+       "      <td>36107.0</td>\n",
+       "      <td>1819.0</td>\n",
+       "      <td>31</td>\n",
+       "      <td>32.3600</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99994</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>76</td>\n",
+       "      <td>44.8873</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99997</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>24</td>\n",
+       "      <td>48.3377</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99998</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>63</td>\n",
+       "      <td>46.5531</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>50000 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Emolument  Working_hours  AGE_2018   target\n",
+       "UID                                               \n",
+       "1        20794.0         1838.0        44  33.1791\n",
+       "3            NaN            NaN        52  42.3055\n",
+       "5            NaN            NaN        80  45.9223\n",
+       "7            NaN            NaN        58  39.3028\n",
+       "11       14514.0          378.0        42  28.6227\n",
+       "...          ...            ...       ...      ...\n",
+       "99992    20236.0         1498.0        37  43.6648\n",
+       "99993    36107.0         1819.0        31  32.3600\n",
+       "99994        NaN            NaN        76  44.8873\n",
+       "99997        NaN            NaN        24  48.3377\n",
+       "99998        NaN            NaN        63  46.5531\n",
+       "\n",
+       "[50000 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 149,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "_df"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 144,
-   "id": "77dddb23",
+   "id": "6ce3b725",
    "metadata": {},
    "outputs": [
     {
@@ -1996,7 +2146,7 @@
   {
    "cell_type": "code",
    "execution_count": 146,
-   "id": "0d2ee319",
+   "id": "8562b765",
    "metadata": {},
    "outputs": [
     {
