--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -946,13 +946,13 @@
        "                                                                   SimpleImputer()),\n",
        "                                                                  ('standardscaler',\n",
        "                                                                   StandardScaler())]),\n",
-       "                                                  <sklearn.compose._column_transformer.make_column_selector object at 0x7f07a2c606a0>),\n",
+       "                                                  <sklearn.compose._column_transformer.make_column_selector object at 0x7fd9b7cce5e0>),\n",
        "                                                 ('pipeline-2',\n",
        "                                                  Pipeline(steps=[('simpleimputer',\n",
        "                                                                   SimpleImputer(strategy='most_frequent')),\n",
        "                                                                  ('onehotencoder',\n",
        "                                                                   OneHotEncoder())]),\n",
-       "                                                  <sklearn.compose._column_transformer.make_column_selector object at 0x7f07a2c60f10>)])),\n",
+       "                                                  <sklearn.compose._column_transformer.make_column_selector object at 0x7fd9b7cce460>)])),\n",
        "                ('sgdregressor', SGDRegressor())])"
       ]
      },
@@ -974,7 +974,7 @@
     {
      "data": {
       "text/plain": [
-       "0.8992211828137716"
+       "0.898289837263941"
       ]
      },
      "execution_count": 14,
