--- a/Preprocessing.ipynb
+++ b/Preprocessing.ipynb
@@ -20,7 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "files = [ \"learn_dataset.csv\", \"learn_dataset_emp_contract.csv\", \"learn_dataset_job.csv\", \"learn_dataset_sport.csv\"]\n",
+    "files = [\"learn_dataset.csv\", \"learn_dataset_emp_contract.csv\", \"learn_dataset_job.csv\", \"learn_dataset_sport.csv\"]\n",
     "\n",
     "data = [] \n",
     "\n",
@@ -472,7 +472,8 @@
     "from sklearn.impute import SimpleImputer\n",
     "from sklearn.compose import make_column_selector, make_column_transformer\n",
     "from sklearn.pipeline import make_pipeline\n",
-    "from sklearn.linear_model import LinearRegression, SGDRegressor"
+    "from sklearn.linear_model import LinearRegression, SGDRegressor\n",
+    "from sklearn.model_selection import GridSearchCV"
    ]
   },
   {
@@ -923,17 +924,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 35,
    "id": "75413f47",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = make_pipeline(prepocessor, SGDRegressor())"
+    "param_grid = {\n",
+    "    \"learning_rate\" : [\"adaptive\", \"invscaling\"],\n",
+    "    \"loss\":[\"squared_error\", \"huber\"]\n",
+    "}\n",
+    "model = make_pipeline(prepocessor, GridSearchCV(SGDRegressor(),\n",
+    "                                                param_grid,\n",
+    "                                               cv=3,\n",
+    "                                               refit=True\n",
+    "                                               ))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 36,
    "id": "ed3bdb57",
    "metadata": {},
    "outputs": [
@@ -946,17 +955,22 @@
        "                                                                   SimpleImputer()),\n",
        "                                                                  ('standardscaler',\n",
        "                                                                   StandardScaler())]),\n",
-       "                                                  <sklearn.compose._column_transformer.make_column_selector object at 0x7fd9b7cce5e0>),\n",
+       "                                                  <sklearn.compose._column_transformer.make_column_selector object at 0x7fb11e7a7e80>),\n",
        "                                                 ('pipeline-2',\n",
        "                                                  Pipeline(steps=[('simpleimputer',\n",
        "                                                                   SimpleImputer(strategy='most_frequent')),\n",
        "                                                                  ('onehotencoder',\n",
        "                                                                   OneHotEncoder())]),\n",
-       "                                                  <sklearn.compose._column_transformer.make_column_selector object at 0x7fd9b7cce460>)])),\n",
-       "                ('sgdregressor', SGDRegressor())])"
+       "                                                  <sklearn.compose._column_transformer.make_column_selector object at 0x7fb11e7a7bb0>)])),\n",
+       "                ('gridsearchcv',\n",
+       "                 GridSearchCV(cv=3, estimator=SGDRegressor(),\n",
+       "                              param_grid={'learning_rate': ['adaptive',\n",
+       "                                                            'invscaling'],\n",
+       "                                          'loss': ['squared_error',\n",
+       "                                                   'huber']}))])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -967,17 +981,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 37,
    "id": "d1377135",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.898289837263941"
+       "0.8998923935752521"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -985,6 +999,130 @@
    "source": [
     "model.score(X_train, y_train)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "a3380d0f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transform=prepocessor.fit_transform(X_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "984f41e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>(0, 0)\\t-0.24114670491200876\\n  (0, 1)\\t0.70...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>(0, 0)\\t0.15293376265048259\\n  (0, 1)\\t-6.81...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>(0, 0)\\t1.5322153991192022\\n  (0, 1)\\t-6.811...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>(0, 0)\\t0.4484941133223511\\n  (0, 1)\\t-6.811...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>(0, 0)\\t-0.3396668218026316\\n  (0, 1)\\t-3.66...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49995</th>\n",
+       "      <td>(0, 0)\\t-0.5859671140291887\\n  (0, 1)\\t-0.31...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49996</th>\n",
+       "      <td>(0, 0)\\t-0.8815274647010571\\n  (0, 1)\\t0.650...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49997</th>\n",
+       "      <td>(0, 0)\\t1.3351751653379567\\n  (0, 1)\\t-6.811...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49998</th>\n",
+       "      <td>(0, 0)\\t-1.2263478738182372\\n  (0, 1)\\t-6.81...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49999</th>\n",
+       "      <td>(0, 0)\\t0.6947944055489081\\n  (0, 1)\\t-6.811...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>50000 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                       0\n",
+       "0        (0, 0)\\t-0.24114670491200876\\n  (0, 1)\\t0.70...\n",
+       "1        (0, 0)\\t0.15293376265048259\\n  (0, 1)\\t-6.81...\n",
+       "2        (0, 0)\\t1.5322153991192022\\n  (0, 1)\\t-6.811...\n",
+       "3        (0, 0)\\t0.4484941133223511\\n  (0, 1)\\t-6.811...\n",
+       "4        (0, 0)\\t-0.3396668218026316\\n  (0, 1)\\t-3.66...\n",
+       "...                                                  ...\n",
+       "49995    (0, 0)\\t-0.5859671140291887\\n  (0, 1)\\t-0.31...\n",
+       "49996    (0, 0)\\t-0.8815274647010571\\n  (0, 1)\\t0.650...\n",
+       "49997    (0, 0)\\t1.3351751653379567\\n  (0, 1)\\t-6.811...\n",
+       "49998    (0, 0)\\t-1.2263478738182372\\n  (0, 1)\\t-6.81...\n",
+       "49999    (0, 0)\\t0.6947944055489081\\n  (0, 1)\\t-6.811...\n",
+       "\n",
+       "[50000 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.DataFrame(transform)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3ad30ab4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
